--- a/prufrock.html
+++ b/prufrock.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <!-- website title -->
-        <title>The Boaring Company</title>
+        <title>Profrock - The Boaring Company</title>
         <!-- favicon -->
         <link rel="icon" href="img/logo/favicon.png">
         <!-- meta tags -->
@@ -36,13 +36,13 @@
                         <li><a href="project.html">projects</a></li>
                         <li><a href="prufrock.html">prufrock</a></li>
                         <li><a href="loop.html">loop</a></li>
-                        <li><a class="header-link-2-1" href="#">Carres</a></li>
-                        <li><a class="header-link-2-1" href="#">flamethower</a></li>
+                        <li><a class="header-link-2-1" href="carrers.html">Carres</a></li>
+                        <li><a class="header-link-2-1" href="flamethrower.html">flamethrower</a></li>
                     </ul>
                 </div>
                 <div class="header-link-2">
-                    <a class="header-link-2-1" href="#">Carres</a>
-                    <a class="header-link-2-1" href="#">flamethower</a>
+                    <a class="header-link-2-1" href="carrers.html">Carres</a>
+                    <a class="header-link-2-1" href="flamethrower.html">flamethrower</a>
                     <a href="#"><i onclick="menutoggle()" class="fas fa-bars"></i></a>
                 </div>
             </div>
@@ -128,7 +128,7 @@
         <!-- garry the snail -->
         <div class="garry" id="parallax">
             <div class="garry-info" data-aos="fade-up">
-                <h5>HEY, GARY THE SNAIL...</h5>
+                <h5>HEY, GARRY THE SNAIL...</h5>
                 <h5>PRUFROCK WILL CATCH YOU!</h5>
             </div>
                    
