--- a/carrers.html
+++ b/carrers.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <!-- website title -->
-        <title>Loop - The Boaring Company</title>
+        <title>Carrer - The Boaring Company</title>
         <!-- favicon -->
         <link rel="icon" href="img/logo/favicon.png">
         <!-- meta tags -->
@@ -55,7 +55,7 @@
                     <h1>
                         TRANSPORTATION NETWORK
                     </h1>
-                    <a href="#">SEE OPEN POSITIONS</a>
+                    <a href="#job-open">SEE OPEN POSITIONS</a>
                     
                 </div>
             </div>
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="hr"></div>
-            <div class="carrer-explanation">
+            <div class="carrer-explanation" id="job-open">
                 <h1>Carrers</h1>
                 <p>
                     We're looking for talented individuals ready to get their hands dirty to make a meaningful impact that will last for generations to come. We are an equal opportunity employer offering competitive salaries, comprehensive health benefits, and equity packages.
@@ -155,7 +155,7 @@
                             <li>Electrical Engineer</li>
                             <li>Civil Engineer</li>
                             <li>Software Engineer</li>
-                            <li>Production Engineer</li>
+                            <li>Sr. Civil Engineer</li>
                             <li>Structural Engineer</li>
                         </ul>
                     </div>
@@ -178,7 +178,7 @@
                             <li>Accounting clerk</li>
                             <li>Loop technician</li>
                             <li>Loop Driver</li>
-                            <li>Senior project manager</li>
+                            <li>Sr. project manager</li>
                             <li>Security guard</li>
                             <li>Crane operator</li>
                         </ul>
@@ -200,10 +200,10 @@
                     <div class="job-list-col">
                         <ul class="job-list-color">
                             <li>Hydaulic Manager</li>
-                            <li>Hydaulics technician</li>
+                            <li>Hydaulics Engineer</li>
                             <li>Machinist</li>
                             <li>Mechnanic</li>
-                            <li>Mechanical technical</li>
+                            <li>Mechanical Er.</li>
                             <li>Walder</li>
                         </ul>
                     </div>
@@ -227,11 +227,11 @@
             <p><a href="#return">RETURN TO TOP</a></p>
             <div class="hr"></div>
             <div class="social-links">
-                <a href="#">CONTACT</a>
+                <a href="mailto:queery@theboringcompany.com">CONTACT</a>
                 <a href="#">TWITTER</a>
                 <a href="#">YOUTUBE</a>
                 <a href="#">LINKEDIN</a>
-                <a href="#">CARRERS</a>
+                <a href="carrers.html">CARRERS</a>
             </div>
         </div>        
 
