--- a/loop.html
+++ b/loop.html
@@ -155,11 +155,11 @@
             <p><a href="#return">RETURN TO TOP</a></p>
             <div class="hr"></div>
             <div class="social-links">
-                <a href="#">CONTACT</a>
+                <a href="mailto:queery@theboringcompany.com">CONTACT</a>
                 <a href="#">TWITTER</a>
                 <a href="#">YOUTUBE</a>
                 <a href="#">LINKEDIN</a>
-                <a href="#">CARRERS</a>
+                <a href="carrers.html">CARRERS</a>
             </div>
         </div>        
 
