--- a/project.html
+++ b/project.html
@@ -53,10 +53,10 @@
                     <h1>OUR PROJECT
                     </h1>
                     <p>
-                       <a href="#">LVCC LOOP</a>
-                       <a href="#">VEGAS LOOP</a>
-                       <a href="#">R&D TUNNEL</a>
-                       <a href="#">HYPERLOOP TEST TRACK</a>
+                       <a href="#lvccloop">LVCC LOOP</a>
+                       <a href="#vegasloop">VEGAS LOOP</a>
+                       <a href="#rdtunnel">R&D TUNNEL</a>
+                       <a href="#testtrack">HYPERLOOP TEST TRACK</a>
 
 
                     </p>
@@ -65,7 +65,7 @@
         </div>
         <!-- loop discription -->
         <div class="loop-disc project-disc-bg">
-            <div class="loop-card">
+            <div class="loop-card" id="lvccloop">
                 <div class="loop-card-col" data-aos="zoom-out-up">
                     <img src="img/project/LVCC+Loop+Hero+1_April+2021.jpg" alt="">
                 </div>
@@ -78,13 +78,13 @@
                     <p>
                         LVCC Loop connects the LVCC New Exhibit Hall with the existing campus (North/Central/South Halls), and reduces a 45 minute cross-campus walk time to approximately 2 minutes.
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="lvccloop.html">Learn more</a>
                     </div>
                 </div>
             </div>
             <div class="hr"></div>
 
-            <div class="loop-card">
+            <div class="loop-card" id="vegasloop">
                 <div class="loop-card-col" data-aos="zoom-out-up">
                     <img src="img/project/strip.jpg" alt="">
                 </div>
@@ -100,13 +100,13 @@
                     <p>
                         Vegas Loop will be designed with similar compatible construction infrastructure and would provide an express connection between any two stations using Tesla vehicles.
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="vegas-loop.html">Learn more</a>
                     </div>
                 </div>
             </div>
             <div class="hr"></div>
 
-            <div class="loop-card">
+            <div class="loop-card" id="rdtunnel">
                 <div class="loop-card-col" data-aos="zoom-out-up">
                     <img src="img/project/Tunnel_5.17.19.jpg" alt="">
                 </div>
@@ -120,13 +120,13 @@
                         The Hawthorne R&D Tunnel, including SpaceX and O’Leary Station, was completed in December 2018 for less than $10 Million.
                     </p>
 
-                    <a href="#">Learn more</a>
+                    <a href="rnd-tunnel.html">Learn more</a>
                     </div>
                 </div>
             </div>
             <div class="hr"></div>
 
-            <div class="loop-card">
+            <div class="loop-card" id="testtrack">
                 <div class="loop-card-col" data-aos="zoom-out-up">
                     <img src="img/project/Hyperloop.jpg" alt="">
                 </div>
@@ -139,7 +139,7 @@
                     <p>
                         The 0.8 mile Hyperloop Test Track, or Hypertube, was constructed in 2016 and been the site of four student competitions, where student-built Pods reached speeds of up to 288 mph.
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="hyperloop.html">Learn more</a>
                     </div>
                 </div>
             </div>
@@ -162,11 +162,11 @@
             <p><a href="#return">RETURN TO TOP</a></p>
             <div class="hr"></div>
             <div class="social-links">
-                <a href="#">CONTACT</a>
+                <a href="mailto:queery@theboringcompany.com">CONTACT</a>
                 <a href="#">TWITTER</a>
                 <a href="#">YOUTUBE</a>
                 <a href="#">LINKEDIN</a>
-                <a href="#">CARRERS</a>
+                <a href="carrers.html">CARRERS</a>
             </div>
         </div>        
 
