--- a/tunnel.html
+++ b/tunnel.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <!-- website title -->
-        <title>Tunnel - The Boaring Company</title>
+        <title>Tunnel - The Boring Company</title>
         <!-- favicon -->
         <link rel="icon" href="img/logo/favicon.png">
         <!-- meta tags -->
