--- a/lvccloop.html
+++ b/lvccloop.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <!-- website title -->
-        <title>LVCC Loop - The Boaring Company</title>
+        <title>LVCC Loop - The Boring Company</title>
         <!-- favicon -->
         <link rel="icon" href="img/logo/favicon.png">
         <!-- meta tags -->
