--- a/prufrock.html
+++ b/prufrock.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <!-- website title -->
-        <title>Profrock - The Boaring Company</title>
+        <title>Profrock - The Boring Company</title>
         <!-- favicon -->
         <link rel="icon" href="img/logo/favicon.png">
         <!-- meta tags -->
