--- a/vegas-loop.html
+++ b/vegas-loop.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <!-- website title -->
-        <title>Vegas loop - The Boaring Company</title>
+        <title>Vegas loop - The Boring Company</title>
         <!-- favicon -->
         <link rel="icon" href="img/logo/favicon.png">
         <!-- meta tags -->
