--- a/rnd-tunnel.html
+++ b/rnd-tunnel.html
@@ -39,12 +39,12 @@
                         <li><a href="project.html">projects</a></li>
                         <li><a href="prufrock.html">prufrock</a></li>
                         <li><a href="loop.html">loop</a></li>
-                        <li><a class="header-link-2-1" href="carrers.html">Carres</a></li>
+                        <li><a class="header-link-2-1" href="carrers.html">Carrer</a></li>
                         <li><a class="header-link-2-1" href="flamethrower.html">flamethrower</a></li>
                     </ul>
                 </div>
                 <div class="header-link-2">
-                    <a class="header-link-2-1" href="carrers.html">Carres</a>
+                    <a class="header-link-2-1" href="carrers.html">Carrer</a>
                     <a class="header-link-2-1" href="flamethrower.html">flamethower</a>
                     <a href="#"><i onclick="menutoggle()" class="fas fa-bars"></i></a>
                 </div>
