--- a/product.html
+++ b/product.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <!-- website title -->
-        <title>Project - The Boring Company</title>
+        <title>Project - The Boaring Company</title>
         <!-- favicon -->
         <link rel="icon" href="img/logo/favicon.png">
         <!-- meta tags -->
@@ -37,12 +37,12 @@
                         <li><a href="project.html">projects</a></li>
                         <li><a href="prufrock.html">prufrock</a></li>
                         <li><a href="loop.html">loop</a></li>
-                        <li><a class="header-link-2-1" href="carrers.html">Carrer</a></li>
+                        <li><a class="header-link-2-1" href="carrers.html">Carres</a></li>
                         <li><a class="header-link-2-1" href="flamethrower.html">flamethrower</a></li>
                     </ul>
                 </div>
                 <div class="header-link-2">
-                    <a class="header-link-2-1" href="carrers.html">Carrer</a>
+                    <a class="header-link-2-1" href="carrers.html">Carres</a>
                     <a class="header-link-2-1" href="flamethrower.html">flamethrower</a>
                     <a href="#"><i onclick="menutoggle()" class="fas fa-bars"></i></a>
                 </div>
@@ -202,7 +202,12 @@
                  duration:1000,
              });
            </script>
-        
+           <!-- parallax  -->
+           <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+           <script src="js/Parallaxie-master/parallaxie.js"></script>
+           <script>
+               $('.main-container').parallaxie();
+           </script>
     
     </body>
 </html>
